# hoppinworldclient

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build_linux.sh  build_windows.bat  nohup.out
assets/base/config/: display.ron  input.ron  player.ron
assets/base/maps/: hoppinworldtest1.blend  hoppinworldtest1.blend1  hoppinworldtest1.glb  hoppinworldtest1.gltf  test.ron  test01.gltf  test01.hop
assets/base/prefabs/: gameplay_ui.ron  login_ui.ron  map_select_ui.ron  menu_ui.ron  pause_ui.ron  result_ui.ron
assets/base/tmp/: test.ron
maps/: lines.glb  lines.hop  test01.glb  test01.hop
schematics/: colors.txt  convert.sh
schematics/assets/base/prefabs/: gameplay_ui.ron  login_ui.ron  map_select_ui.ron  menu_ui.ron  pause_ui.ron  result_ui.ron
src/: main.rs
src/resource/: current_map.rs  map_info_cache.rs  mod.rs
src/state/: gameplay.rs  init.rs  login.rs  main_menu.rs  map_load.rs  map_select.rs  mod.rs  pause.rs  result.rs
src/system/: contact_system.rs  mod.rs  ui.rs
src/util/: file.rs  mod.rs
