[package]
name = "hoppinworld"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]

[dependencies]

amethyst = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }
amethyst_gltf = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }
amethyst_core = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }

hyper = "0.12.11"
hyper-tls = "0.3.1"

tokio = "0.1.7"
tokio-executor = "0.1.0"

amethyst-extra = { git = "https://github.com/jojolepro/amethyst-extra" }
amethyst-rhusics = { git = "https://github.com/amethyst/amethyst-rhusics" }

serde = { version = "1", features = ["serde_derive"] }
log = "0.4"
winit = "0.17.0"
partial_function = "0.4.0"
derive-new = "0.5"
derive_builder = "0.6"
specs-derive = { git = "https://github.com/slide-rs/specs" }
uuid = { version = "0.7.1", features = ["v4", "serde"] }
ron = "0.4"

hoppinworlddata = { git = "https://github.com/hoppinworld/data" }

amethyst-editor-sync = "0.2"
serde_json = "1.0.32"

[patch.crates-io]
amethyst = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }
amethyst_core = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }
amethyst_assets = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }
amethyst_renderer = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }

#amethyst-editor-sync = { git = "https://github.com/randomPoison/amethyst-editor-sync" }


[patch.'https://github.com/amethyst/amethyst']
amethyst = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }
amethyst_core = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }
amethyst_assets = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }
amethyst_renderer = { git = "https://github.com/karroffel/amethyst", branch = "shader-light-fixes" }

#[patch.'https://github.com/rustgd/rhusics']
#rhusics-core = { git = "https://github.com/jojolepro/rhusics", branch = "defaults", features = ["serde"] }
#rhusics-ecs = { git = "https://github.com/jojolepro/rhusics", branch = "defaults", features = ["serde"] }